# shark_search

./: .gitignore  app.py  pyproject.toml  shark_test.py  sharks.json  sharks.py
templates/: home.j2  shark_search.j2
templates/partials/: search.j2
