[tool.poetry]
name = "learning_python"
version = "0.1.0"
description = ""
authors = ["ceri-w <ceri_webster@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
